# mcp-searxng

./: .dockerignore  .justfile  AGENTS.md  Cargo.toml  Dockerfile  README.md  mcp-searxng.container
src/: config.rs  error.rs  handler.rs  main.rs  searxng.rs  tools.rs
