[package]
name = "mcp-searxng"
version = "0.1.0"
edition = "2024"

[dependencies]
# MCP Server SDK con Streamable HTTP y macros
rust-mcp-sdk = { version = "0.9", default-features = false, features = ["server", "macros", "stdio", "hyper-server", "streamable-http"] }

# HTTP client para llamadas a las APIs (compatible con rust-mcp-sdk)
reqwest = { version = "0.12", features = ["json"], default-features = false }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Manejo de errores
anyhow = "1.0"
thiserror = "2.0"

# Necesario para implementar ServerHandler
async-trait = "0.1"

# Cosas
openssl = { version = "0.10.79", features = ["vendored"] }
